--- a/backend/package.json
+++ b/backend/package.json
@@ -22,8 +22,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "i18next": "^25.6.0",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-express-middleware": "^2.0.0",
+    "i18next-fs-backend": "^2.6.0",
+    "i18next-http-backend": "^3.0.2",
     "jsonwebtoken": "^9.0.2",
-    "pdfkit": "^0.17.2"
+    "pdfkit": "^0.17.2",
+    "react-i18next": "^16.0.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
