--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/cairo": "^5.2.7",
     "axios": "^1.6.2",
     "bcryptjs": "^3.0.2",
+    "i18next": "^25.6.0",
+    "i18next-browser-languagedetector": "^8.2.0",
     "jsonwebtoken": "^9.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^16.0.1",
     "react-router-dom": "^6.20.1"
   },
   "devDependencies": {
